# ai-saju-master

./: .cursorrules  .gitignore  README.md
app/: core  cruds.py  database.py  main.py  models.py  schemas.py
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 17bbc240bbf3_update_fortune_logs_schema.py  2039c7a5d784_add_calendar_type.py  97955fa98cae_initial_schema.py
backend/app/: main.py
backend/app/core/: saju_engine.py
backend/app/db/: database.py
backend/app/models/: __init__.py  fortune.py  log.py  saju.py  user.py
backend/app/routers/: fortune.py  profiles.py  system.py
backend/app/schemas/: fortune.py  profile.py
backend/app/services/: fortune_service.py  llm_service.py  rag_service.py  saju_service.py
docs/: 01_concept_and_requirements.md  02_service_flow.md  03_system_architecture.md  04_db_design.md  05_ai_logic.md  06_api_design.md  07_prompt_design.md  08_business_model.md  09_roadmap.md  domain_rules.md  erd.md  커서.md  폴더구조.md
docs/api/: admin_ai_log.md  admin_fortune.md  admin_system.md  admin_user_profile.md  fortunes.md  logs.md  profiles.md  saju.md  system.md  users.md
frontend/: package-lock.json  package.json
